JCF2: regenerated translations and updated Russian translation

--- a/components/jcf2/IdePlugin/lazarus/languages/jcfuiconsts.es.po
+++ b/components/jcf2/IdePlugin/lazarus/languages/jcfuiconsts.es.po
@@ -608,7 +608,7 @@ msgid "All files"
 msgstr ""
 
 #: jcfuiconsts.lisfrfilesexport
-msgid "Export..."
+msgid "Export"
 msgstr ""
 
 #: jcfuiconsts.lisfrfilesexportdlgtitle
@@ -628,7 +628,7 @@ msgid "File not found"
 msgstr ""
 
 #: jcfuiconsts.lisfrfilesimport
-msgid "Import..."
+msgid "Import"
 msgstr ""
 
 #: jcfuiconsts.lisfrfilesimportdlgtitle
