--- a/components/jcf2/IdePlugin/lazarus/languages/jcfuiconsts.uk.po
+++ b/components/jcf2/IdePlugin/lazarus/languages/jcfuiconsts.uk.po
@@ -617,7 +617,7 @@ msgid "All files"
 msgstr ""
 
 #: jcfuiconsts.lisfrfilesexport
-msgid "Export..."
+msgid "Export"
 msgstr ""
 
 #: jcfuiconsts.lisfrfilesexportdlgtitle
@@ -637,7 +637,7 @@ msgid "File not found"
 msgstr "Файл не знайдено"
 
 #: jcfuiconsts.lisfrfilesimport
-msgid "Import..."
+msgid "Import"
 msgstr ""
 
 #: jcfuiconsts.lisfrfilesimportdlgtitle
