--- a/components/jcf2/IdePlugin/lazarus/languages/jcfuiconsts.cs.po
+++ b/components/jcf2/IdePlugin/lazarus/languages/jcfuiconsts.cs.po
@@ -612,7 +612,7 @@ msgid "All files"
 msgstr ""
 
 #: jcfuiconsts.lisfrfilesexport
-msgid "Export..."
+msgid "Export"
 msgstr ""
 
 #: jcfuiconsts.lisfrfilesexportdlgtitle
@@ -632,7 +632,7 @@ msgid "File not found"
 msgstr ""
 
 #: jcfuiconsts.lisfrfilesimport
-msgid "Import..."
+msgid "Import"
 msgstr ""
 
 #: jcfuiconsts.lisfrfilesimportdlgtitle
