--- a/components/jcf2/IdePlugin/lazarus/languages/jcfuiconsts.de.po
+++ b/components/jcf2/IdePlugin/lazarus/languages/jcfuiconsts.de.po
@@ -606,7 +606,7 @@ msgid "All files"
 msgstr ""
 
 #: jcfuiconsts.lisfrfilesexport
-msgid "Export..."
+msgid "Export"
 msgstr ""
 
 #: jcfuiconsts.lisfrfilesexportdlgtitle
@@ -626,7 +626,7 @@ msgid "File not found"
 msgstr "Datei nicht gefunden"
 
 #: jcfuiconsts.lisfrfilesimport
-msgid "Import..."
+msgid "Import"
 msgstr ""
 
 #: jcfuiconsts.lisfrfilesimportdlgtitle
