--- a/components/jcf2/IdePlugin/lazarus/languages/jcfuiconsts.it.po
+++ b/components/jcf2/IdePlugin/lazarus/languages/jcfuiconsts.it.po
@@ -615,7 +615,7 @@ msgid "All files"
 msgstr ""
 
 #: jcfuiconsts.lisfrfilesexport
-msgid "Export..."
+msgid "Export"
 msgstr ""
 
 #: jcfuiconsts.lisfrfilesexportdlgtitle
@@ -635,7 +635,7 @@ msgid "File not found"
 msgstr "File non trovato"
 
 #: jcfuiconsts.lisfrfilesimport
-msgid "Import..."
+msgid "Import"
 msgstr ""
 
 #: jcfuiconsts.lisfrfilesimportdlgtitle
