OPM: Minor changes in GUI texts. Complete German translation.

--- a/components/onlinepackagemanager/languages/opkman_const.pot
+++ b/components/onlinepackagemanager/languages/opkman_const.pot
@@ -148,13 +148,12 @@ msgstr ""
 msgid "Add package to the current repository"
 msgstr ""
 
-#: opkman_const.rscreaterepositoryfrm_bcancel_caption
-msgctxt "opkman_const.rscreaterepositoryfrm_bcancel_caption"
-msgid "Cancel"
+#: opkman_const.rscreaterepositoryfrm_bclose_caption
+msgid "Close"
 msgstr ""
 
-#: opkman_const.rscreaterepositoryfrm_bcancel_hint
-msgctxt "opkman_const.rscreaterepositoryfrm_bcancel_hint"
+#: opkman_const.rscreaterepositoryfrm_bclose_hint
+msgctxt "opkman_const.rscreaterepositoryfrm_bclose_hint"
 msgid "Close this dialog"
 msgstr ""
 
