--- a/components/onlinepackagemanager/languages/opkman_const.ru.po
+++ b/components/onlinepackagemanager/languages/opkman_const.ru.po
@@ -160,10 +160,9 @@ msgstr "Добавить пакет в текущий репозиторий"
 
 #: opkman_const.rscreaterepositoryfrm_bclose_caption
 msgid "Close"
-msgstr ""
+msgstr "Закрыть"
 
 #: opkman_const.rscreaterepositoryfrm_bclose_hint
-#, fuzzy
 msgctxt "opkman_const.rscreaterepositoryfrm_bclose_hint"
 msgid "Close this dialog"
 msgstr "Закрыть этот диалог"
