--- a/languages/lazaruside.he.po
+++ b/languages/lazaruside.he.po
@@ -8853,7 +8853,9 @@ msgid "Create project"
 msgstr "צור פרוייקט"
 
 #: lazarusidestrconsts.liscreateupdatepofilewhensavingalfmfile
-msgid "Create/update .po file when saving a lfm file"
+#, fuzzy
+#| msgid "Create/update .po file when saving a lfm file"
+msgid "Extract translatable strings from a form when saving its LFM file"
 msgstr "צור/עדכן קובץ po. כאשר אתה שומר את קובץ lfm"
 
 #: lazarusidestrconsts.liscreatingfileindexoffpcsources
