--- a/languages/lazaruside.it.po
+++ b/languages/lazaruside.it.po
@@ -8646,7 +8646,9 @@ msgid "Create project"
 msgstr "Crea progetto"
 
 #: lazarusidestrconsts.liscreateupdatepofilewhensavingalfmfile
-msgid "Create/update .po file when saving a lfm file"
+#, fuzzy
+#| msgid "Create/update .po file when saving a lfm file"
+msgid "Extract translatable strings from a form when saving its LFM file"
 msgstr "Crea/aggiorna file .po quando si salva un file .lfm"
 
 #: lazarusidestrconsts.liscreatingfileindexoffpcsources
