--- a/languages/lazaruside.lt.po
+++ b/languages/lazaruside.lt.po
@@ -8630,7 +8630,9 @@ msgid "Create project"
 msgstr "Sukurti projektą"
 
 #: lazarusidestrconsts.liscreateupdatepofilewhensavingalfmfile
-msgid "Create/update .po file when saving a lfm file"
+#, fuzzy
+#| msgid "Create/update .po file when saving a lfm file"
+msgid "Extract translatable strings from a form when saving its LFM file"
 msgstr "Įrašant „.lfm“ failą, taip pat kurti/naujinti ir „.po“ failą"
 
 #: lazarusidestrconsts.liscreatingfileindexoffpcsources
