--- a/languages/lazaruside.ca.po
+++ b/languages/lazaruside.ca.po
@@ -8644,7 +8644,7 @@ msgid "Create project"
 msgstr ""
 
 #: lazarusidestrconsts.liscreateupdatepofilewhensavingalfmfile
-msgid "Create/update .po file when saving a lfm file"
+msgid "Extract translatable strings from a form when saving its LFM file"
 msgstr ""
 
 #: lazarusidestrconsts.liscreatingfileindexoffpcsources
