IDE: regenerated translations and updated Russian translation

--- a/languages/lazaruside.ar.po
+++ b/languages/lazaruside.ar.po
@@ -8319,8 +8319,8 @@ msgstr "إنسخ الخطأ"
 msgid "Copy Filename %s"
 msgstr ""
 
-#: lazarusidestrconsts.liscopyfilenametoclipboard
-msgid "Copy File Name to Clipboard"
+#: lazarusidestrconsts.liscopyfilenamestoclipboard
+msgid "Copy File Names to Clipboard"
 msgstr ""
 
 #: lazarusidestrconsts.liscopyfilesfailed
