--- a/languages/lazaruside.af_ZA.po
+++ b/languages/lazaruside.af_ZA.po
@@ -8312,8 +8312,8 @@ msgstr "Kopieer vout"
 msgid "Copy Filename %s"
 msgstr ""
 
-#: lazarusidestrconsts.liscopyfilenametoclipboard
-msgid "Copy File Name to Clipboard"
+#: lazarusidestrconsts.liscopyfilenamestoclipboard
+msgid "Copy File Names to Clipboard"
 msgstr ""
 
 #: lazarusidestrconsts.liscopyfilesfailed
