--- a/languages/lazaruside.he.po
+++ b/languages/lazaruside.he.po
@@ -8720,8 +8720,8 @@ msgstr "שגיאת העתקה"
 msgid "Copy Filename %s"
 msgstr ""
 
-#: lazarusidestrconsts.liscopyfilenametoclipboard
-msgid "Copy File Name to Clipboard"
+#: lazarusidestrconsts.liscopyfilenamestoclipboard
+msgid "Copy File Names to Clipboard"
 msgstr ""
 
 #: lazarusidestrconsts.liscopyfilesfailed
