--- a/languages/lazaruside.id.po
+++ b/languages/lazaruside.id.po
@@ -8570,8 +8570,8 @@ msgstr "Copy salah"
 msgid "Copy Filename %s"
 msgstr ""
 
-#: lazarusidestrconsts.liscopyfilenametoclipboard
-msgid "Copy File Name to Clipboard"
+#: lazarusidestrconsts.liscopyfilenamestoclipboard
+msgid "Copy File Names to Clipboard"
 msgstr ""
 
 #: lazarusidestrconsts.liscopyfilesfailed
