--- a/languages/lazaruside.nl.po
+++ b/languages/lazaruside.nl.po
@@ -8547,8 +8547,8 @@ msgstr "Kopieerfout"
 msgid "Copy Filename %s"
 msgstr ""
 
-#: lazarusidestrconsts.liscopyfilenametoclipboard
-msgid "Copy File Name to Clipboard"
+#: lazarusidestrconsts.liscopyfilenamestoclipboard
+msgid "Copy File Names to Clipboard"
 msgstr ""
 
 #: lazarusidestrconsts.liscopyfilesfailed
