--- a/languages/lazaruside.sk.po
+++ b/languages/lazaruside.sk.po
@@ -8346,8 +8346,8 @@ msgstr "Chyba kopírovania"
 msgid "Copy Filename %s"
 msgstr ""
 
-#: lazarusidestrconsts.liscopyfilenametoclipboard
-msgid "Copy File Name to Clipboard"
+#: lazarusidestrconsts.liscopyfilenamestoclipboard
+msgid "Copy File Names to Clipboard"
 msgstr ""
 
 #: lazarusidestrconsts.liscopyfilesfailed
